--- a/Client/ShaderFrameWork/ShaderFrameWork.Plugins.csproj
+++ b/Client/ShaderFrameWork/ShaderFrameWork.Plugins.csproj
@@ -5,16 +5,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{80D0F3BA-BCBE-1010-7E12-2D6B45D389E4}</ProjectGuid>
+    <ProjectGuid>{1EE59CFA-6219-528E-300C-4E400CF67BA9}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
+    <AssemblyName>Assembly-CSharp-firstpass</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
-    <UnityProjectType>Editor:5</UnityProjectType>
+    <UnityProjectType>GamePlugins:3</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.4.2f2</UnityVersion>
     <RootNamespace></RootNamespace>
@@ -196,17 +196,8 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.UI">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/GUISystem/Editor/UnityEditor.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.Networking">
       <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.Networking">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/Networking/Editor/UnityEditor.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.TestRunner">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/TestRunner/Editor/UnityEditor.TestRunner.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TestRunner">
       <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/TestRunner/UnityEngine.TestRunner.dll</HintPath>
@@ -217,131 +208,37 @@
     <Reference Include="UnityEngine.Timeline">
       <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/Timeline/RuntimeEditor/UnityEngine.Timeline.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.Timeline">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/Timeline/Editor/UnityEditor.Timeline.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.TreeEditor">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/TreeEditor/Editor/UnityEditor.TreeEditor.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UIAutomation">
       <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UIAutomation/UnityEngine.UIAutomation.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.UIAutomation">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UIAutomation/Editor/UnityEditor.UIAutomation.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.GoogleAudioSpatializer">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UnityGoogleAudioSpatializer/Editor/UnityEditor.GoogleAudioSpatializer.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.GoogleAudioSpatializer">
       <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UnityGoogleAudioSpatializer/RuntimeEditor/UnityEngine.GoogleAudioSpatializer.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.HoloLens">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UnityHoloLens/Editor/UnityEditor.HoloLens.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.SpatialTracking">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/Editor/UnityEditor.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.VR">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/UnityVR/Editor/UnityEditor.VR.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.Graphs">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.Android.Extensions">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/PlaybackEngines/AndroidPlayer/UnityEditor.Android.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.WindowsStandalone.Extensions">
-      <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
-      <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/15.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.Advertisements">
       <HintPath>C:/ProgramData/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.4/UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.Advertisements">
-      <HintPath>C:/ProgramData/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.4/Editor/UnityEditor.Advertisements.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Analytics">
       <HintPath>C:/ProgramData/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/UnityEngine.Analytics.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.Analytics">
-      <HintPath>C:/ProgramData/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/Editor/UnityEditor.Analytics.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.Purchasing">
       <HintPath>C:/ProgramData/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/UnityEngine.Purchasing.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.Purchasing">
-      <HintPath>C:/ProgramData/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/Editor/UnityEditor.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.StandardEvents">
       <HintPath>C:/ProgramData/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
     </Reference>
-    <Reference Include="SimpleMatrixLibrary">
-      <HintPath>Assets/UBER/Editor/SimpleMatrixLibrary.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="ShaderFrameWork.Plugins.csproj">
-      <Project>{1EE59CFA-6219-528E-300C-4E400CF67BA9}</Project>
-      <Name>ShaderFrameWork.Plugins</Name>
-    </ProjectReference>
-    <ProjectReference Include="ShaderFrameWork.csproj">
-      <Project>{F0B8725E-9CD9-D8CD-119A-4361F5653F9D}</Project>
-      <Name>ShaderFrameWork</Name>
-    </ProjectReference>
-    <ProjectReference Include="ShaderFrameWork.Editor.Plugins.csproj">
-      <Project>{57AEA271-413E-3B2F-49B3-E73CCC865C25}</Project>
-      <Name>ShaderFrameWork.Editor.Plugins</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Assets\Alloy\Scripts\AreaLight\Editor\AlloyAreaLightEditor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\AreaLight\Editor\AlloyLightCreator.cs" />
-    <Compile Include="Assets\Alloy\Scripts\AreaLight\Editor\AlloyLightEditor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\Editor\AlloyEditor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\Editor\AlloyMenuGroups.cs" />
-    <Compile Include="Assets\Alloy\Scripts\Editor\AlloyMigrationTools.cs" />
-    <Compile Include="Assets\Alloy\Scripts\Editor\AlloyPropertyDrawers.cs" />
-    <Compile Include="Assets\Alloy\Scripts\Editor\AlloyRequiredActions.cs" />
-    <Compile Include="Assets\Alloy\Scripts\EffectsManager\Editor\AlloyCameraEditor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\EffectsManager\Editor\AlloyEffectsManagerEditor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\AlloyInspectorBase.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\AlloyTabGroup.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\AlloyFieldBasedEditor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\AlloyFieldLexer.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\AlloyFieldParser.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyFieldDrawerFactory.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyFieldDrawers.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyFloatDrawers.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyTextureDrawer.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyTextureParser.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyVectorDrawers.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyCustomImportAction.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyCustomImportObject.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyCustomImportObjectEditor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyImporterSupervisor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyMaterialMapChannelPacker.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyPackerCompositor.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyTextureReader.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\ChannelDrawer.cs" />
-    <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\MaterialMapChannelPackerDefinitionEditor.cs" />
-    <Compile Include="Assets\Editor\CreateMaterials.cs" />
-    <Compile Include="Assets\Editor\OrganizeDocuments.cs" />
-    <Compile Include="Assets\UBER\Editor\NoKeywordToggleDrawer.cs" />
-    <Compile Include="Assets\UBER\Editor\UBER_BakeTanNormalsEditor.cs" />
-    <Compile Include="Assets\UBER\Editor\UBER_PostProcessDistanceMap.cs" />
-    <Compile Include="Assets\UBER\Editor\UBER_PostProcessMIPGloss.cs" />
-    <Compile Include="Assets\UBER\Editor\UBER_PostProcessMIPHeights.cs" />
-    <Compile Include="Assets\UBER\Editor\UBER_PostProcessModelForPOM.cs" />
-    <Compile Include="Assets\UBER\Editor\UBER_StandardShaderGUI.cs" />
-    <Compile Include="Assets\UBER\Editor\UBER_TextureChannelMixer.cs" />
+    <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Bloom\Bloom.cs" />
+    <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Common\ImageEffectHelper.cs" />
+    <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Common\MinAttribute.cs" />
+    <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Common\RenderTextureUtility.cs" />
+    <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\TonemappingColorGrading\TonemappingColorGrading.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Alloy Mods\Shaders\3.0\Car Paint Fast ClearCoat.shader" />
