--- a/Client/ShaderFrameWork/Assembly-CSharp-Editor-firstpass.csproj
+++ b/Client/ShaderFrameWork/Assembly-CSharp-Editor-firstpass.csproj
@@ -9,10 +9,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{621E37F8-2EED-A2EC-037A-B8E753DA1468}</ProjectGuid>
+    <ProjectGuid>{F49E15CD-282B-0927-CB57-F69856769DDE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
+    <AssemblyName>Assembly-CSharp-Editor-firstpass</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>Assets</BaseDirectory>
@@ -51,48 +51,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Alloy\Scripts\AreaLight\Editor\AlloyAreaLightEditor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\AreaLight\Editor\AlloyLightCreator.cs" />
-     <Compile Include="Assets\Alloy\Scripts\AreaLight\Editor\AlloyLightEditor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\Editor\AlloyEditor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\Editor\AlloyMenuGroups.cs" />
-     <Compile Include="Assets\Alloy\Scripts\Editor\AlloyMigrationTools.cs" />
-     <Compile Include="Assets\Alloy\Scripts\Editor\AlloyPropertyDrawers.cs" />
-     <Compile Include="Assets\Alloy\Scripts\Editor\AlloyRequiredActions.cs" />
-     <Compile Include="Assets\Alloy\Scripts\EffectsManager\Editor\AlloyCameraEditor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\EffectsManager\Editor\AlloyEffectsManagerEditor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\AlloyInspectorBase.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\AlloyTabGroup.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\AlloyFieldBasedEditor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\AlloyFieldLexer.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\AlloyFieldParser.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyFieldDrawerFactory.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyFieldDrawers.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyFloatDrawers.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyTextureDrawer.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyTextureParser.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialInspectors\Editor\FieldBased\Drawers\AlloyVectorDrawers.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyCustomImportAction.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyCustomImportObject.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyCustomImportObjectEditor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyImporterSupervisor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyMaterialMapChannelPacker.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyPackerCompositor.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\AlloyTextureReader.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\ChannelDrawer.cs" />
-     <Compile Include="Assets\Alloy\Scripts\MaterialMapChannelPacker\Editor\MaterialMapChannelPackerDefinitionEditor.cs" />
-     <Compile Include="Assets\Editor\CreateMaterials.cs" />
-     <Compile Include="Assets\Editor\OrganizeDocuments.cs" />
-     <Compile Include="Assets\UBER\Editor\NoKeywordToggleDrawer.cs" />
-     <Compile Include="Assets\UBER\Editor\UBER_BakeTanNormalsEditor.cs" />
-     <Compile Include="Assets\UBER\Editor\UBER_PostProcessDistanceMap.cs" />
-     <Compile Include="Assets\UBER\Editor\UBER_PostProcessMIPGloss.cs" />
-     <Compile Include="Assets\UBER\Editor\UBER_PostProcessMIPHeights.cs" />
-     <Compile Include="Assets\UBER\Editor\UBER_PostProcessModelForPOM.cs" />
-     <Compile Include="Assets\UBER\Editor\UBER_StandardShaderGUI.cs" />
-     <Compile Include="Assets\UBER\Editor\UBER_TextureChannelMixer.cs" />
-     <None Include="Assets\Alloy\Scripts\Editor\MaterialMigratorWarning.txt" />
-     <None Include="Assets\UBER\Editor\BakeProps.shader" />
+     <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Bloom\Editor\BloomEditor.cs" />
+     <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Bloom\Editor\BloomGraphDrawer.cs" />
+     <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Common\Editor\EditorGUIHelper.cs" />
+     <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Common\Editor\FieldFinder.cs" />
+     <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Common\Editor\MinDrawer.cs" />
+     <Compile Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\TonemappingColorGrading\Editor\TonemappingColorGradingEditor.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity2017.4.2f2/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -190,10 +154,6 @@
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
       <Project>{CC872ADE-6F16-FC4A-F223-8627087FC46D}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
-    <ProjectReference Include="Assembly-CSharp.csproj">
-      <Project>{27EB482D-DAC4-BFF9-202B-60206187B927}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
-    <ProjectReference Include="Assembly-CSharp-Editor-firstpass.csproj">
-      <Project>{F49E15CD-282B-0927-CB57-F69856769DDE}</Project>      <Name>Assembly-CSharp-Editor-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
