--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Library
 obj
 UBER
 Standard Assets
+LocalRes
 ##############################
 ## Netbeans conf            ##
 ##############################
