--- a/Client/ShaderFrameWork/ShaderFrameWork.Plugins.csproj
+++ b/Client/ShaderFrameWork/ShaderFrameWork.Plugins.csproj
@@ -461,8 +461,110 @@
     <None Include="Assets\MSF\Shaders\Shader_Test 1.shader" />
     <None Include="Assets\MSF\Shaders\Shader_Test.shader" />
     <None Include="Assets\Note.txt" />
+    <None Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Bloom\Resources\Bloom.cginc" />
+    <None Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\Bloom\Resources\Bloom.shader" />
+    <None Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\TonemappingColorGrading\Resources\HistogramCompute.compute" />
+    <None Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\TonemappingColorGrading\Resources\HistogramRender.shader" />
+    <None Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\TonemappingColorGrading\Resources\TonemappingColorGrading.cginc" />
+    <None Include="Assets\Standard Assets\Effects\CinematicEffects(BETA)\TonemappingColorGrading\Resources\TonemappingColorGrading.shader" />
     <None Include="Assets\UBER\Documentation.txt" />
     <None Include="Assets\UBER\Editor\BakeProps.shader" />
+    <None Include="Assets\UBER\Models\_model_praparation_info.txt" />
+    <None Include="Assets\UBER\OpenFootage\_info.txt" />
+    <None Include="Assets\UBER\Shaders\Deferred_Lighting\Internal-DeferredShading_UBER.shader" />
+    <None Include="Assets\UBER\Shaders\Deferred_Lighting\UBER_with_Alloy.txt" />
+    <None Include="Assets\UBER\Shaders\Includes\DeferredTranslucensyBlit.shader" />
+    <None Include="Assets\UBER\Shaders\Includes\UBER_AutoLightMOD.cginc" />
+    <None Include="Assets\UBER\Shaders\Includes\UBER_StandardCore.cginc" />
+    <None Include="Assets\UBER\Shaders\Includes\UBER_StandardInput.cginc" />
+    <None Include="Assets\UBER\Shaders\Includes\UBER_StandardShadow_Tessellation.cginc" />
+    <None Include="Assets\UBER\Shaders\Includes\UBER_StandardUtils2.cginc" />
+    <None Include="Assets\UBER\Shaders\Includes\UBER_UnityDeferredLibrary.cginc" />
+    <None Include="Assets\UBER\Shaders\Resources\UBER_CopyPropsTexture.shader" />
+    <None Include="Assets\UBER\Shaders\UBER_ForwardFogType.cginc" />
+    <None Include="Assets\UBER\Shaders\UBER_StandardConfig.cginc" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_2Layers_GeomBlend.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_2Layers_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_2Sided.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_2Sided_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_2Sided_TriplanarSelective.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_2Sided_TriplanarSelective_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_GeomBlend.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_POMAdvanced.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_POMAdvanced_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_POMDistanceMap.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_POMDistanceMap_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_POMExtrusionMap.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_POMExtrusionMap_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Refraction_Simple(no_normalmap).shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Simple(no_normalmap).shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_2Layers_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_2Sided.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_2Sided_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_2Sided_TriplanarSelective.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_2Sided_TriplanarSelective_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_TriplanarSelective.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_TriplanarSelective_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_TriplanarSelective_2Layers_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_TriplanarSelective_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_fallback2POMAdvanced.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_Tessellation_fallback2POMAdvanced_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_TriplanarSelective.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_TriplanarSelective_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_TriplanarSelective_2Layers_GeomBlend.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_TriplanarSelective_2Layers_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_TriplanarSelective_GeomBlend.shader" />
+    <None Include="Assets\UBER\Shaders\_Metallic\_UBERShader_Metallic_TriplanarSelective_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_2Layers_GeomBlend.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_2Layers_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_2Sided.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_2Sided_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_2Sided_TriplanarSelective.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_2Sided_TriplanarSelective_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_GeomBlend.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_POMAdvanced.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_POMAdvanced_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_POMDistanceMap.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_POMDistanceMap_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_POMExtrusionMap.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_POMExtrusionMap_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Refraction_Simple(no_normalmap).shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Simple(no_normalmap).shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_2Layers_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_2Sided.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_2Sided_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_2Sided_TriplanarSelective.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_2Sided_TriplanarSelective_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_TriplanarSelective.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_TriplanarSelective_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_TriplanarSelective_2Layers_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_TriplanarSelective_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_fallback2POMAdvanced.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_Tessellation_fallback2POMAdvanced_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_TriplanarSelective.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_TriplanarSelective_2Layers.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_TriplanarSelective_2Layers_GeomBlend.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_TriplanarSelective_2Layers_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_TriplanarSelective_GeomBlend.shader" />
+    <None Include="Assets\UBER\Shaders\_Specular\_UBERShader_Specular_TriplanarSelective_Refraction.shader" />
+    <None Include="Assets\UBER\Shaders\__UserCustomizedShaders\_info.txt" />
+    <None Include="Assets\UBER\Textures\[Modular]\copyright_info.txt" />
+    <None Include="Assets\UBER\Textures\_texture_import_info.txt" />
+    <None Include="Assets\UBER\_Examples\Candle\Sources\Materials\CandleFire.shader" />
+    <None Include="Assets\UBER\_Examples\Hebe\source_info.txt.txt" />
+    <None Include="Assets\UBER\_Examples\_UI elements\SkyboxButton.shader" />
     <None Include="Assets\UBER\_IMPORTANT_INFO.txt" />
     <None Include="Assets\UBER\_UBER_deferred_info.txt" />
     <None Include="Assets\UBER\_verinfo.txt" />
